#noinst_JAVA= 

packagedir=$(datadir)/jmax/client/java/classes/ircam/fts/client
package_JAVA =					\
BinaryProtocolDecoder.java			\
BinaryProtocolEncoder.java			\
BinaryProtocol.java				\
FtsArgs.java					\
FtsAtom.java					\
FtsClient.java					\
FtsClientException.java				\
FtsMessageHandler.java				\
FtsObject.java					\
FtsPipeConnection.java				\
FtsProcess.java					\
FtsServer.java					\
FtsServerConnection.java			\
FtsSocketConnection.java			\
FtsSymbol.java 					\
RawString.java 					\
SymbolCache.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= @top_srcdir@/java
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT)

