#noinst_JAVA= 

packagedir=$(datadir)/jmax/client/java/classes/ircam/fts/client
package_JAVA =					\
BinaryProtocolDecoder.java			\
BinaryProtocolEncoder.java			\
BinaryProtocol.java				\
FtsArgs.java					\
FtsAtom.java					\
FtsClientException.java				\
FtsMessageHandler.java				\
FtsObject.java					\
FtsPipeConnection.java				\
FtsProcess.java					\
FtsServer.java					\
FtsServerConnection.java			\
FtsSocketConnection.java			\
FtsSymbol.java 					\
RawString.java 					\
SymbolCache.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= $(top_builddir)/java
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT)

