pythonclientdir = $(datadir)/jmax/client/python/ircam/fts/client

#python_PYTHON= \

pythonclient_DATA = \
BinaryProtocolDecoder.py \
BinaryProtocolEncoder.py \
BinaryProtocol.py \
Buffer.py \
FtsArgs.py \
FtsAtom.py \
FtsClientException.py \
FtsObject.py \
FtsServerConnection.py \
FtsSocketConnection.py \
HashTable.py \
__init__.py \
SymbolCache.py 

EXTRA_DIST = $(pythonclient_DATA)
