pythonclientdir = $(datadir)/jmax/client/python/ircam/fts/client

#python_PYTHON= 
pythonclient_DATA = \
BinaryProtocolDecoder.py \
BinaryProtocolEncoder.py \
BinaryProtocol.py \
FtsClientException.py \
FtsObject.py \
FtsRawString.py \
FtsServerConnection.py \
FtsSocketConnection.py \
HashTable.py \
SymbolCache.py \
__init__.py 

EXTRA_DIST = $(pythonclient_DATA)
