packagedir=$(pkgdatadir)/java/classes/ircam/jmax/dialogs
package_JAVA = \
HTMLDialog.java\
InputDialog.java\
MaxFileChooser.java\
SplashDialog.java\
StatisticsDialog.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= @top_srcdir@/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):@top_srcdir@/client/java/ftsclient.jar

