packagedir=$(pkgdatadir)/java/classes/ircam/jmax/dialogs
package_JAVA = \
HTMLDialog.java\
InputDialog.java\
MaxFileChooser.java\
SplashDialog.java\
StatisticsDialog.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@ -sourcepath $(top_srcdir)/java/src
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar

