packagedir=$(pkgdatadir)/java/classes/ircam/jmax/dialogs
package_JAVA = \
HTMLDialog.java\
InputDialog.java\
MaxFileChooser.java\
SplashDialog.java\
StatisticsDialog.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(CLASSPATH):$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar:$(top_srcdir)/java/src

