packagedir=$(pkgdatadir)/java/classes/ircam/jmax/fts
package_JAVA = \
FtsAtomList.java\
FtsAtomListListener.java\
FtsClipboard.java\
FtsConnection.java\
FtsConnectionListener.java\
FtsConsole.java\
FtsDspControl.java\
FtsEditListener.java\
FtsErrorStreamer.java\
FtsException.java\
FtsFinderObject.java\
FtsErrorFinderObject.java\
FtsGraphicListener.java\
FtsHelpPatchTable.java\
FtsInletsListener.java\
FtsIntValueListener.java\
FtsIntValueObject.java\
FtsMessageListener.java\
FtsModule.java\
FtsObjectErrorListener.java\
FtsObjectSet.java\
FtsObjectWithEditor.java\
FtsOutletsListener.java\
FtsParse.java\
FtsPatcherListener.java\
FtsPatcherObject.java\
FtsTemplateObject.java\
FtsQuittedException.java\
FtsRuntimeErrors.java\
FtsSelection.java\
FtsUndoableObject.java\
FtsActionListener.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= @top_srcdir@/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):@top_srcdir@/client/java/ftsclient.jar
