packagedir=$(pkgdatadir)/java/classes/ircam/jmax/fts
package_JAVA = \
FtsClipboard.java\
FtsConnection.java\
FtsConnectionListener.java\
FtsConsole.java\
FtsDspControl.java\
FtsEditListener.java\
FtsErrorStreamer.java\
FtsException.java\
FtsFinderObject.java\
FtsErrorFinderObject.java\
FtsGraphicListener.java\
FtsGraphicObject.java\
FtsHelpPatchTable.java\
FtsInletsListener.java\
FtsIntValueListener.java\
FtsIntValueObject.java\
FtsMessageListener.java\
FtsMidiManager.java\
FtsObjectErrorListener.java\
FtsObjectSet.java\
FtsObjectWithEditor.java\
FtsOutletsListener.java\
FtsPackage.java\
FtsPatcherListener.java\
FtsPatcherObject.java\
FtsProject.java\
FtsTemplateObject.java\
FtsQuittedException.java\
FtsRuntimeErrors.java\
FtsSelection.java\
FtsUndoableObject.java\
FtsUpdateGroup.java\
FtsUpdateGroupListener.java\
FtsActionListener.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= @top_srcdir@/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):@top_srcdir@/client/java/ftsclient.jar
