java_JAVA= \
AbstractMaxDataEditor.java\
MaxContext.java\
MaxData.java\
MaxDataEditor.java\
MaxDataEditorFactory.java\
MaxDataEditorReadyListener.java\
MaxDocument.java\
MaxDocumentException.java\
MaxDocumentHandler.java\
MaxDocumentListener.java\
MaxDocumentType.java\
MaxEnv.java\
MaxExecutedScriptDocument.java\
MaxScriptDocument.java\
Mda.java

JAVAC=@JAVAC@
JAVAROOT=@top_srcdir@/java/src
CLASSPATH_ENV=CLASSPATH=@top_srcdir@/java/src:@top_srcdir@/java/lib/jacl/jacl.jar:@top_srcdir@/java/lib/jacl/tcljava.jar
