SUBDIRS=actions menus

packagedir=$(pkgdatadir)/java/classes/ircam/jmax/toolkit
package_JAVA = \
AbstractLayer.java\
AbstractRenderer.java\
AbstractSelection.java\
AbstractUndoableObject.java\
ClipableData.java\
ComponentContextSwitcher.java\
ContextSwitcher.java\
DirectionChooser.java\
DirectionListener.java\
DragListener.java\
DynamicDragListener.java\
Editor.java\
EditorContainer.java\
EditorToolbar.java\
Geometry.java\
GraphicContext.java\
GraphicSelectionListener.java\
InfoPanel.java\
InteractionModule.java\
InteractionSemaphore.java\
Layer.java\
LockListener.java\
MouseDragTracker.java\
MouseTracker.java\
NumericPropertyEditor.java\
NumericalWidget.java\
ObjectRenderer.java\
PopupProvider.java\
PopupToolbarPanel.java\
PositionListener.java\
ProportionalLayout.java\
RenderManager.java\
Selecter.java\
SelectionHandler.java\
SelectionListener.java\
SelectionMover.java\
SelectionOwner.java\
SelectionResizer.java\
StatusBar.java\
StatusBarClient.java\
SwitchListener.java\
Tool.java\
ToolChangeEvent.java\
ToolListener.java\
ToolManager.java\
ToolProvider.java\
ToolbarProvider.java\
TranspositionListener.java\
UndoableData.java\
Widget.java\
WindowContextSwitcher.java\
XORHandler.java\
XORPainter.java\
ZoomListener.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@ -sourcepath $(top_srcdir)/java/src
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar
