packagedir=$(pkgdatadir)/java/classes/ircam/jmax/widgets
package_JAVA = \
BeanPanel.java\
ColorPropertyEditor.java\
ConsoleArea.java\
IncrementController.java\
IncrementListener.java\
IndicatorWithMemory.java\
Led.java\
MemoryLed.java\
ObjectSelectedListener.java\
ObjectSetViewer.java\
SimpleLed.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@ -sourcepath $(top_srcdir)/java/src
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar
