packagedir=$(pkgdatadir)/java/classes/ircam/jmax/widgets
package_JAVA = \
BeanPanel.java\
ColorPropertyEditor.java\
ConsoleArea.java\
IncrementController.java\
IncrementListener.java\
IndicatorWithMemory.java\
Led.java\
MemoryLed.java\
ObjectSelectedListener.java\
ObjectSetViewer.java\
SimpleLed.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(CLASSPATH):$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar:$(top_srcdir)/java/src
