packagedir=$(pkgdatadir)/java/classes/ircam/jmax/editors/configuration/
package_JAVA = \
AudioConfigPanel.java\
MidiConfigPanel.java\
ConfigurationEditor.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= @top_srcdir@/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):@top_srcdir@/client/java/ftsclient.jar

