packagedir=$(pkgdatadir)/java/classes/ircam/jmax/editors/configuration/
package_JAVA = \
AudioConfigPanel.java\
MidiConfigPanel.java\
ConfigurationEditor.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@ -sourcepath $(top_srcdir)/java/src
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar

