packagedir=$(pkgdatadir)/java/classes/ircam/jmax/editors/configuration/
package_JAVA = \
AudioConfigPanel.java\
MidiConfigPanel.java\
ConfigurationEditor.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(CLASSPATH):$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar:$(top_srcdir)/java/src

