packagedir=$(pkgdatadir)/java/classes/ircam/jmax/editors/console/
package_JAVA = \
ConsoleOutputStream.java\
ConsoleWindow.java\
ControlPanel.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@ -sourcepath $(top_srcdir)/java/src
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar

