packagedir=$(pkgdatadir)/java/classes/ircam/jmax/editors/console/
package_JAVA = \
ConsoleOutputStream.java\
ConsoleWindow.java\
ControlPanel.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(CLASSPATH):$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar:$(top_srcdir)/java/src

