SUBDIRS= actions interactions menus objects

packagedir=$(pkgdatadir)
package_JAVA = \
AddPopUp.java\
ConnectionAction.java\
DisplayList.java\
EditField.java\
ErmesModule.java\
ErmesPatcherListener.java\
ErmesSelection.java\
ErmesSketchPad.java\
ErmesSketchWindow.java\
ErmesToolBar.java\
ErmesToolButton.java\
ErrorTableModel.java\
ErrorTablePanel.java\
FinderTableModel.java\
FinderTablePanel.java\
FontCache.java\
IconRenderer.java\
JMaxToolPanel.java\
KeyEventClient.java\
KeyEventsManager.java\
KeyMap.java\
MaxRepaintManager.java\
MessageDisplayer.java\
MoreObjectsButton.java\
ObjectAction.java\
ObjectRenderer.java\
PatcherClipboardManager.java\
PatcherFontManager.java\
PatcherPrintManager.java\
PatcherSaveManager.java\
RuntimeError.java\
RuntimeErrorsTableModel.java\
RuntimeErrorsTablePanel.java\
ScaleDialog.java\
ScaleTransform.java\
Settings.java\
TextRenderer.java\
ToolsPanel.java\
ToolTableModel.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= @top_srcdir@/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):@top_srcdir@/client/java/ftsclient.jar
