packagedir=$(pkgdatadir)/java/classes/ircam/jmax/editors/project/
package_JAVA = \
ConfigPackagePanel.java\
NewProjectDialog.java\
ProjectEditor.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@ -sourcepath $(top_srcdir)/java/src
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar

