packagedir=$(pkgdatadir)/java/classes/ircam/jmax/editors/project/
package_JAVA = \
ConfigPackagePanel.java\
NewProjectDialog.java\
ProjectEditor.java

JAVAC= @JAVACX@
JAVACFLAGS= @JAVACFLAGSX@
JAVAROOT= $(top_builddir)/java/src
CLASSPATH_ENV= CLASSPATH=$(CLASSPATH):$(JAVAROOT):$(top_builddir)/client/java/ftsclient.jar:$(top_srcdir)/java/src

